--- a/app/globals.css
+++ b/app/globals.css
@@ -57,3 +57,51 @@
     @apply bg-background text-foreground;
   }
 }
+
+.whack-a-mole-board {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 30px;
+}
+
+.whack-a-mole-hole {
+  background-image: url("~/assets/hole.png");
+  background-size: 100% 100%;
+  width: 100%;
+  /* position: relative; */
+  /* overflow: hidden; */
+}
+
+.whack-a-mole-hole .mole {
+  background-size: 100% 100%;
+  width: 100%;
+  height: 100px;
+  background-image: url("~/assets/mole.png");
+  /* animation: mole-rise 0.3s ease-out; */
+  /* transform: translateX(-50%); */
+  /* position: absolute; */
+}
+
+.hammer {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  background-image: url("~/assets/hammer.png");
+  background-size: 100% 100%;
+}
+
+.hammer.active {
+  transform: rotate(45deg);
+}
+
+@keyframes mole-rise {
+  0% {
+    transform: translateX(0%) translateY(100%);
+  }
+  100% {
+    transform: translateX(0%) translateY(0);
+  }
+}
