--- a/app/globals.css
+++ b/app/globals.css
@@ -60,24 +60,31 @@
 
 .whack-a-mole-board {
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(4, 1fr);
-  gap: 30px;
+  /* gap: 30px; */
 }
 
 .whack-a-mole-hole {
   background-image: url("~/assets/hole.png");
   background-size: 100% 100%;
   width: 100%;
-  /* position: relative; */
-  /* overflow: hidden; */
+  height: 100%;
+  min-height: 100px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
 .whack-a-mole-hole .mole {
   background-size: 100% 100%;
   width: 100%;
-  height: 100px;
+  height: 100%;
   background-image: url("~/assets/mole.png");
+
   /* animation: mole-rise 0.3s ease-out; */
   /* transform: translateX(-50%); */
   /* position: absolute; */
