--- a/app/globals.css
+++ b/app/globals.css
@@ -65,9 +65,20 @@
   /* gap: 30px; */
 }
 
+#mole-hammer-area {
+  cursor: url('~/assets/hammer-cursor.png'), auto;
+}
+
+.hammer-hit {
+  cursor: url('~/assets/hammer-hit.png'), auto !important;
+  transition: 100ms;
+}
+
 .whack-a-mole-hole {
-  background-image: url("~/assets/hole.png");
-  background-size: 100% 100%;
+  background-image: url('~/assets/hole.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
   width: 100%;
   height: 100%;
   min-height: 100px;
@@ -79,15 +90,35 @@
   overflow: hidden;
 }
 
-.whack-a-mole-hole .mole {
-  background-size: 100% 100%;
+.mole {
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
   width: 100%;
   height: 100%;
-  background-image: url("~/assets/mole.png");
+  z-index: 1;
+  background-image: url('~/assets/mole.png');
+  animation: popUp 2s ease-in-out forwards infinite;
 
   /* animation: mole-rise 0.3s ease-out; */
   /* transform: translateX(-50%); */
   /* position: absolute; */
+}
+
+@keyframes popUp {
+  0% {
+    transform: translateY(25%);
+  }
+  25% {
+    transform: translateY(0%);
+  }
+  75% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(25%);
+    /* opacity: 0; */
+  }
 }
 
 .hammer {
@@ -96,7 +127,7 @@
   position: absolute;
   top: 100px;
   left: 100px;
-  background-image: url("~/assets/hammer.png");
+  background-image: url('~/assets/hammer.png');
   background-size: 100% 100%;
 }
 
