--- a/app/globals.css
+++ b/app/globals.css
@@ -61,7 +61,7 @@
 .whack-a-mole-board {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(7, 1fr);
   /* gap: 30px; */
 }
 
@@ -98,11 +98,24 @@
   height: 100%;
   z-index: 1;
   background-image: url('~/assets/mole.png');
-  animation: popUp 2s ease-in-out forwards infinite;
+  /* animation: popUp 2s ease-in-out forwards infinite; */
 
   /* animation: mole-rise 0.3s ease-out; */
   /* transform: translateX(-50%); */
   /* position: absolute; */
+}
+
+.whacked {
+  position: absolute;
+  bottom: 20px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-image: url('~/assets/explotion.gif');
+  /* animation: Explode 500ms ease-in-out forwards infinite; */
 }
 
 @keyframes popUp {
@@ -118,6 +131,16 @@
   100% {
     transform: translateY(25%);
     /* opacity: 0; */
+  }
+}
+
+@keyframes Explode {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
   }
 }
 
