--- a/app/globals.css
+++ b/app/globals.css
@@ -165,3 +165,31 @@
     transform: translateX(0%) translateY(0);
   }
 }
+
+input:focus-visible {
+  outline: none;
+}
+
+.bg-shape-square {
+  position: fixed;
+  pointer-events: none;
+  background-color: rgb(0, 0, 0);
+  transform: rotate(45deg);
+  opacity: 0.1;
+  top: -15vmin;
+  left: -15vmin;
+  min-width: 75vmin;
+  min-height: 75vmin;
+}
+
+.bg-shape-circle {
+  position: fixed;
+  pointer-events: none;
+  border-radius: 50%;
+  background-color: rgb(0, 0, 0);
+  opacity: 0.1;
+  min-width: 75vmin;
+  min-height: 75vmin;
+  bottom: -15vmin;
+  right: -15vmin;
+}
