--- a/app/globals.css
+++ b/app/globals.css
@@ -118,14 +118,9 @@ input:focus-visible {
   height: 100%;
   z-index: 100;
   background-image: url("~/assets/mole-1.png");
-  animation: ScaleUp 2s ease-in-out forwards infinite,
-    ScaleDown 2s ease-in-out forwards infinite;
+  animation: ScaleUpDown 2s ease-in-out forwards infinite;
   bottom: 2px;
   position: absolute;
-}
-
-.mole:target {
-  height: 100%;
 }
 
 .whacked {
@@ -140,84 +135,29 @@ input:focus-visible {
   background-image: url("~/assets/explotion.gif");
 }
 
-@keyframes ScaleUp {
+@keyframes ScaleUpDown {
   0% {
     visibility: visible;
     opacity: 0;
     bottom: -14px;
   }
 
-  100% {
-    visibility: visible;
-    opacity: 1;
-    bottom: 20px;
-  }
-}
-
-@keyframes ScaleDown {
-  0% {
-    visibility: visible;
-    opacity: 1;
-    bottom: 20px;
-  }
-
-  80% {
-    visibility: hidden;
-    opacity: 0;
-    bottom: -14px;
-  }
-
-  100% {
-    visibility: visible;
-    opacity: 0;
-    bottom: -14px;
-  }
-}
-
-@keyframes popUp {
-  0% {
-    bottom: -45px;
-    height: 1;
-    opacity: 0;
-  }
-  /* 25% {
-    opacity: 0;
-  }
-  85% {
-    opacity: 0.75;
-  }
-  90% {
-    opacity: 1;
-  } */
-  100% {
-    /* bottom: 40px;
-    opacity: 1; */
-
-    bottom: 0;
-    height: 1;
-    opacity: 1;
-  }
-}
-
-@keyframes popDown {
-  0% {
-    bottom: 40px;
-    opacity: 1;
-  }
   25% {
+    visibility: visible;
     opacity: 1;
+    bottom: 20px;
   }
+
   85% {
-    opacity: 0.75;
+    visibility: visible;
+    opacity: 1;
+    bottom: 20px;
   }
-  90% {
-    opacity: 0;
-  }
+
   100% {
-    bottom: -45px;
-    height: 1;
-    display: none;
+    visibility: visible;
     opacity: 0;
+    bottom: -14px;
   }
 }
 
