--- a/app/globals.css
+++ b/app/globals.css
@@ -70,16 +70,16 @@ input:focus-visible {
 }
 
 #mole-hammer-area {
-  cursor: url('~/assets/hammer-cursor.png'), auto;
+  cursor: url("~/assets/hammer-cursor.png"), auto;
 }
 
 .hammer-hit {
-  cursor: url('~/assets/hammer-hit.png'), auto !important;
+  cursor: url("~/assets/hammer-hit.png"), auto !important;
   transition: 100ms;
 }
 
 .whack-a-mole-hole {
-  background-image: url('~/assets/hole.png');
+  background-image: url("~/assets/hole.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom;
@@ -95,7 +95,7 @@ input:focus-visible {
 }
 
 .whack-a-mole-half-hole {
-  background-image: url('~/assets/half-hole.png');
+  background-image: url("~/assets/half-hole.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom;
@@ -117,7 +117,7 @@ input:focus-visible {
   width: 100%;
   height: 100%;
   z-index: 100;
-  background-image: url('~/assets/mole-1.png');
+  background-image: url("~/assets/mole-1.png");
   animation: ScaleUpDown 2s ease-in-out forwards infinite;
   bottom: 2px;
   position: absolute;
@@ -132,32 +132,32 @@ input:focus-visible {
   width: 100%;
   height: 100%;
   z-index: 1000;
-  background-image: url('~/assets/explotion.gif');
+  background-image: url("~/assets/explotion.gif");
 }
 
 @keyframes ScaleUpDown {
   0% {
     visibility: visible;
     opacity: 0;
-    bottom: -14px;
+    transform: translateY(12%);
   }
 
   25% {
     visibility: visible;
     opacity: 1;
-    bottom: 20px;
+    transform: translateY(0);
   }
 
   85% {
     visibility: visible;
     opacity: 1;
-    bottom: 20px;
+    transform: translateY(0);
   }
 
   100% {
     visibility: visible;
     opacity: 0;
-    bottom: -14px;
+    transform: translateY(12%);
   }
 }
 
@@ -177,7 +177,7 @@ input:focus-visible {
   position: absolute;
   top: 100px;
   left: 100px;
-  background-image: url('~/assets/hammer.png');
+  background-image: url("~/assets/hammer.png");
   background-size: 100% 100%;
 }
 
